# paper-rag

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-06-discover-get.md  2026-07-08-mcp-discover-get-hardening.md
docs/superpowers/specs/: 2026-07-06-discover-get-design.md  2026-07-08-mcp-discover-get-hardening-design.md
src/paper_rag/: cli.py  config.py  mcp_server.py  search.py
src/paper_rag/acquire/: cache.py  dedup.py  discover.py  download.py  get.py  metadata.py  openalex.py  relevance.py  resolve.py  semantic_scholar.py  unpaywall.py
src/paper_rag/data/: SKILL.md  paper-rag.toml.example
src/paper_rag/ingest/: chunk.py  convert.py  embed.py  index.py
tests/: test_acquire_fallback.py  test_build_prune.py  test_cache.py  test_chunk.py  test_cli_discover.py  test_cli_get.py  test_cli_search.py  test_config.py  test_dedup.py  test_discover.py  test_download.py  test_get.py  test_init.py  test_mcp_discover.py  test_mcp_index_refresh.py  test_metadata.py  test_openalex.py  test_relevance.py  test_resolve.py  test_search.py  test_semantic_scholar.py
