[project]
name = "paper-rag"
version = "0.3.1"
description = "Portable local RAG + open-access paper acquisition for Claude Code research repos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "sentence-transformers>=3.0",
    "lancedb>=0.15",
    "pyarrow>=16",
    "pandas>=2.0",
    "tiktoken>=0.7",
    "rank-bm25>=0.2",
    "requests>=2.31",
    "mcp>=1.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
paper-rag = "paper_rag.cli:main"
paper-rag-mcp = "paper_rag.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_rag"]

[tool.hatch.build.targets.wheel.force-include]
"src/paper_rag/data/SKILL.md" = "paper_rag/data/SKILL.md"
"src/paper_rag/data/paper-rag.toml.example" = "paper_rag/data/paper-rag.toml.example"
